BUG-122365 : UI, No 'Show historical entities' checkbox on empty result page after search.
Change-Id: I491011811dd73eda8d81df560d4b854f7eb3756a
Signed-off-by: nixonrodrigues <nixon@apache.org>

--- a/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
@@ -42,10 +42,10 @@
                     <span class="labelShowRecord pull-left" data-id="pageRecordText"> </span>
                 </div>
                 <div class="col-sm-9 inline-content-fr no-padding-left">
+                    <div class="inline" data-id="colManager"></div>
                     <div class="inline">
                         <a href="javascript:void(0)" class=" multiSelectTag assignTag btn btn-action btn-sm" style="display:none" title="Assign Classification" data-id="addAssignTag"><i class="fa fa-plus"></i>&nbsp;Classification</a>
                     </div>
-                    <div class="inline" data-id="colManager"></div>
                     <div class="inline" data-id="containerCheckBox" style="display: none;">
                         <label class="checkbox-inline btn" for="historicalentities">
                             <input type="checkbox" data-id="checkDeletedEntity" data-value="includeDE" id="historicalentities" />
@@ -75,7 +75,7 @@
                 </div>
                 {{/if}}
             </div>
-            <div class="row pagination-box" style="display: none">
+            <div class="row pagination-box searach-result-pagination" style="display: none">
                 <div class="col-sm-offset-4 col-sm-8">
                     <div class="inline-content-fr">
                         <div class="backgrid-paginator inline">
