HOTFIX-2782: ATLAS-3478 : UI: Entity Icon loading improved
Change-Id: I6711d0b363899abb8e77ba78066cb4a6af7b51b7

--- a/dashboardv2/public/js/templates/graph/RelationshipLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/graph/RelationshipLayoutView_tmpl.html
@@ -14,6 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
+<div class="relationship-details">
 <div class="graph-button-group form-group clearfix">
     <div class="btn-group pull-left">
         <span class="pull-left">Graph</span>
@@ -71,4 +72,8 @@
         <tbody data-id="relationshipDetailValue">
         </tbody>
     </table>
+</div>
+</div>
+<div class="no-data" style="display: none;">
+    <h4 style="text-align: center;">No Records found!</h4>
 </div>
