--- a/dashboardv2/public/css/scss/form.scss
+++ b/dashboardv2/public/css/scss/form.scss
@@ -363,6 +363,11 @@ button:focus {
         >span {
             padding: 5px;
 
+            &.active {
+                color: $white;
+                background-color: $tag_color;
+            }
+
             &:hover {
                 @include btn-action-hover-effect('default');
             }
