ATLAS-3909: UI: Improve readability for the table view in the entity detail page
Change-Id: I20d6b1d5be9c67a0d4e7617043b1b1ec10aa3b32

--- a/dashboardv2/public/js/templates/entity/EntityDetailTableLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/entity/EntityDetailTableLayoutView_tmpl.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </div>
-    <table class="table table-quickMenu">
+    <table class="table table-quickMenu bold-key">
         <thead>
             <tr>
                 <th>Key</th>
