--- a/dashboardv2/public/css/scss/table.scss
+++ b/dashboardv2/public/css/scss/table.scss
@@ -16,6 +16,10 @@
  * limitations under the License.
  */
 
+.table.bold-key>tbody>tr>td:first-child {
+    font-weight: 600;
+}
+
 tr.empty {
     td {
         display: table-cell;
